Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-5366

qpid segfaults in qpid::ha::BrokerReplicator::disconnected

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.24
    • 0.26
    • C++ Clustering
    • None

    Description

      Relocating the qpidd-primary service while the cluster is under load was causing sporadic core dumps in BrokerReplicator::disconnected. For details see:

      https://bugzilla.redhat.com/show_bug.cgi?id=1030608

      Attachments

        Activity

          People

            aconway Alan Conway
            aconway Alan Conway
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: